example/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              http_filters:
              - name: envoy.filters.http.golang
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                  library_id: go-envoy-keyauth
                  library_path: "/app/go-envoy-keyauth.so"
                  plugin_name: go-envoy-keyauth
                  plugin_config:
                    "@type": type.googleapis.com/xds.type.v3.TypedStruct
                    value:
                      echo_server_addr: echo_service_cluster
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: echo_service_cluster
                      host_rewrite_literal: httpbin.org
  clusters:
    - name: echo_service_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: echo_service_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: httpbin.org
                  port_value: 443
      transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: httpbin.org
